---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: ????
  Features:
    - Added compatible modules to the crafter page (hidden by default, must be enabled in the page settings)
    - When clicking a search result in the search GUI with the left mouse button, the search GUI will be "stickied" to the search GUI
      - A "detach" button will appear in the titlebar of the sticky window, allowing you to detach it
      - Middle-clicking something will open it in a standalone info GUI
      - This brings back a 2.0-esque experience for those who preferred it
      - This can be disabled in the mod settings
    - Added the ability to collapse components of an info page
      - Some components (categories, compatible modules) default to collapsed to save space
      - Default state can be overridden in the settings
    - Added search GUI location setting, choose between top-left and center
    - Added page content settings
      - Each "section" of a page can be enabled or disabled, and have the following settings based on type:
        - Table (with absolute rows):
          - Row visibility
        - List box:
          - Default state (normal, collapsed, hidden)
          - Max rows
  Changes:
    - Search GUI now opens below the mod_gui button frame, instead of all the way in the corner
  Bugfixes:
    - Fixed that fluidboxes were not being considered for compatible recipes on crafters
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2021-08-14
  Changes:
    - Updated Russian locale by Astorin
    - The search GUI now supports locale-specific widths
  Bugfixes:
    - Fixed a crash when an item has a resource as its place result
    - Fixed a crash when a resource has no products when mined