@@ -39,6 +39,7 @@ rb-alt-click=Alt + click
 rb-attach-search-results-description=If enabled, clicking a search result will open an info page attached to the search GUI. Furthermore, clicking another search result will open it in that same page.\nYou can use the middle mouse button to open a detached info window at any time.
 rb-attach-search-results=Open search results in an attached info GUI
 rb-burned-in=Burned in
+rb-burner-machine=Burner machine
 rb-captions=Captions
 rb-categories=Categories
 rb-categories-description=Uncheck a category to hide its objects from search and information pages.\n[font=default-semibold]NOTE:[/font] Some objects will be shown regardless of these settings (i.e. recipe ingredients and products).
